--- a/style1.css
+++ b/style1.css
@@ -5,6 +5,7 @@
   left: 35%;
   top: 25vh;
   width: 400px;
+  z-index: 2;
 }
 
 #seachingReservations {
@@ -12,7 +13,6 @@
   margin-top: 100px;
   margin-left: 720px;
 }
-
 
   #reservationsTable th, #reservationsTable td {
     border: 1px solid #272525;
@@ -33,6 +33,7 @@
     cursor: pointer;
     margin-right: 10px;
   }
+
   #clear {
     float: right;
     margin-top: -45px;
@@ -67,17 +68,23 @@ h2 {
   grid-area: 2 / 1 / span 1 / 4;
 }
 #searchBar {
-  grid-area: 3/ 3 / span 1 / span 1;
-}
-.table{
-  grid-area: 4 / 1 / span 1 / span 3;
+  grid-area: 3/ 2 / span 1 / span 1;
+ text-align: right;
 
 }
-#reservationsTable{
-  border-collapse: collapse;
-  width: auto;
+#searchButton {
+  grid-area: 3 / 3 / span 1 / span 1;
   text-align: center;
+  
 }
+.table{
+  margin-top: 20px;
+  grid-area: 4 / 1 / span 1 / span 3;
+  position: relative;
+  min-height: 100vh;
+
+}
+
 .Footer-Section {
   grid-area: 5 / 1 / span 1 / span 3;
   background-color: #0d0b1ac9;
@@ -88,7 +95,11 @@ h2 {
   width: 100%;
  
 }
-
+#reservationsTable{
+  border-collapse: collapse;
+  width: auto;
+  text-align: center;
+}
 body {
   margin: 0%;
 }
@@ -112,32 +123,160 @@ body {
  }
  #noData {
   position: absolute;
-  margin-top: 100px;
-  margin-left: 720px;
+  margin-top: 70px;
+  margin-left: 650px;
   
 }
 
- @media screen and (max-width: 768px) and (min-width: 319px) {
+ @media screen and (max-width: 768px) and (min-width: 320px) {
   * {
     box-sizing: border-box;
   }
+  .reservationManagementContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+  }
   #logo {
-    grid-area: 1 / 1 / span 1 / 2;
+    grid-area: 1 / 1 / span 1 / span 1;
+    background-color: rgb(26 20 25 / 1);
+    height: 75px;
   }
   #website_Name {
-    grid-area: 1 / 3 / span 1 / 4;
-    margin-left: 15px;
-    font-size: larger;
-    padding: 20px;
+    background-color: rgb(26 20 25 / 1);
+    height: 75px;
   }
-  .table{
-    grid-area: 4 / 1 / span 1 / span 3;
+  #website_Name1 {
+    grid-area: 1 / 2 / span 1 / span 1;
+    margin-left: 15px;
+    font-size: 20px;
+    padding: 2px;
+    
+  }
+
+ #noData {
+  position: absolute;
+  margin-top: 90px;
+  margin-left: 100px;
+  font-size: large;
   
+ }
+ h2 {
+  grid-area: 2 / 1 / span 1 / span 3;
+  font-size: large;
+ }
+ #searchBar {
+  grid-area: 3 / 1 / span 1 / span 3;
+ }
+ button {
+  padding: 5px 10px;
+ }
+ #search {
+  height: 23px;
+ }
+ #searchButton {
+  grid-area: 4 / 1 / span 1 / span 3;
+  padding: 6px;
+  text-align: right;
+ }
+ .table {
+  grid-area: 5 / 1 / span 1 / span 3;
+ }
+ #reservationForm {
+  position: absolute;
+  display: none;
+  background-color: rgb(241, 234, 226);
+  left: 5%;
+  top: 20vh;
+  width: 300px;
+}
+.editButton {
+  margin: 10px;
+}
+#logo img {
+  height: 70px;
+  object-fit: contain;
+
+}
+
+.Footer-Section a  {
+ 
+  font-size: x-large;
+  color: rgb(202 188 188);
+  padding: 0px 20px;
+  
+}
+
+
+
+@media (min-width: 769px) {
+  * {
+    box-sizing: border-box;
+  }
+  .reservationManagementContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+  }
+  #logo {
+    grid-area: 1 / 1 / span 1 / span 1;
+  }
+  #Website-Name1 {
+    grid-area: 1 / 2 / span 1 / span 1;
+    margin-left: 15px;
+    font-size: xx-large;
+    padding: 20px;
+    text-align: center;
+  }
+  h2 {
+    grid-area: 2 / 1 / span 1 / span 3;
+  }
+  #searchBar {
+    grid-area: 3 / 2 / span 1 / span 1;
+  }
+  #searchButton {
+    grid-area: 3 / 3 / span 1 / span 1;
+  }
+  #reservationForm {
+   position: absolute;
+  display: none;
+  background-color: rgb(241, 234, 226);
+  left: 35%;
+  top: 25vh;
+  width: 400px;
+  z-index: 2;
+  }
+  .editButton {
+    margin-bottom: 100px !important;
+  }
+  
+  .table {
+    grid-area: 4 / 1 / span 1 / span 3;
+   
+  }
+
+ 
+
+}
+
+
+
+
+ 
+
+
+
+
+ 
+
+ 
+  /* .table{
+    grid-area: 4 / 1 / span 1 / span 3;
+    width: 100%;
   }
   #reservationsTable{
     border-collapse: collapse;
-    width: auto;
-  }
+    width: 100%;
+  } */
+  
   
 
  }
